# HonkaiStarRailAPI

./: .gitignore  Cargo.toml  README.md  bun.lockb  index.js  package.json
classes/: cron.js  template.js
config/: example.default.yaml
crons/: index.js
crons/code-redemption-scraper/: index.js
crons/code-validator/: index.js
crons/hoyolab-news/: index.js
docs/: code.md  news.md
object/: error.js
redeemer/: index.js
resolvers/: index.js
resolvers/defaults/: eurogamer-resolver.js  game8-resolver.js  hsr-fandom.js  index.js  polygon-resolver.js  prydwen-resolver.js
resolvers/hoyolab/: api-resolver.js  forum-resolver.js  index.js
resolvers/news/: index.js  parser.js
resolvers/prydwen/: index.js
routes/: code.js  news.js
singletons/: got.js  logger.js  query.js  utils.js
src/: config.rs  lib.rs  logger.rs  main.rs  scheduler.rs
src/handlers/: codes.rs  endpoints.rs  mod.rs  news.rs
src/resolvers/: README.md  mod.rs  news.rs
src/resolvers/eurogamer/: mod.rs  tests.rs
src/resolvers/fandom/: mod.rs  tests.rs
src/resolvers/game8/: mod.rs  tests.rs
src/resolvers/hoyolab/: mod.rs  tests.rs
src/resolvers/polygon/: mod.rs  tests.rs
src/resolvers/prydwen/: mod.rs  tests.rs
src/services/: code_service.rs  db_service.rs  mod.rs  news_service.rs  rate_limiter.rs  validator_service.rs
src/utils/: lang_parser.rs  mod.rs
