[package]
name = "starrail-api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.4.0"
reqwest = { version = "0.11", features = ["json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

mongodb = "3.1.0"

config = "0.13"
log = "0.4"
env_logger = "0.10"

chrono = "0.4"

scraper = "0.17"
regex = "1.10.2"

tokio-cron-scheduler = "0.9"
