[package]
name = "starrail-api"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.4.0"
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"], default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.38", features = ["full"] }
async-trait = "0.1.80"
futures = "0.3"
futures-util = "0.3"

mongodb = { version = "3.0", features = ["snappy-compression"] }

config = "0.13"
log = "0.4"
env_logger = "0.10"

chrono = { version = "0.4", features = ["serde"] }

scraper = "0.17"
regex = "1.10.6"

tokio-cron-scheduler = "0.9"
